# xsjsonlib

./: CMakeLists.txt  example.json
src/: jsonhelper.c  jsonhelper.h  main.c
